--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>ヘアデザイン</title>
+      <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  </head>
+  <body>
+    <div style="text-align:center">
+    <ul class="over">
+    <li> 
+    <a href="https://www.instagram.com/kid_design2021/?utm_source=qr">
+      <img src="https://github.com/Creapct/creapct-.github.io/blob/main/IMG_3099.jpeg?raw=true"width="32%" height="100%"alt="">
+    </a>
+    <a href="https://instagram.com/treatment.spa.kid?utm_medium=copy_link">
+      <img src="https://github.com/Creapct/creapct-.github.io/blob/main/IMG_3100.jpeg?raw=true"width="32%" height="100%"alt="">
+    </a>
+     </li>
+    </ul> 
+  </div>
+  </body>
+</html>
+
 
