--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul class="over">
     <li> 
     <a href="https://www.instagram.com/kid_design2021/?utm_source=qr">
-      <img src="https://github.com/Creapct/creapct-.github.io/blob/main/IMG_3099.jpeg?raw=true"width="32%" height="100%"alt="">
+      <img src="https://github.com/Creapct/creapct-c/blob/main/IMG_3268.PNG?raw=true"width="32%" height="100%"alt="">
     </a>
     <a href="https://instagram.com/treatment.spa.kid?utm_medium=copy_link">
       <img src="https://github.com/Creapct/creapct-.github.io/blob/main/IMG_3100.jpeg?raw=true"width="32%" height="100%"alt="">
