--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <div style="text-align:center">
     <ul class="over">
     <li> 
-    <a href="https://www.instagram.com/kid_design2021/?utm_source=qr">
+    <a href="">
       <img src="https://github.com/Creapct/creapct-c/blob/main/IMG_3268.PNG?raw=true"width="32%" height="100%"alt="">
     </a>
-    <a href="https://instagram.com/treatment.spa.kid?utm_medium=copy_link">
-      <img src="https://github.com/Creapct/creapct-.github.io/blob/main/IMG_3100.jpeg?raw=true"width="32%" height="100%"alt="">
+    <a href="">
+      <img src="https://github.com/Creapct/creapct-c/blob/main/IMG_3269.PNG?raw=true"width="32%" height="100%"alt="">
     </a>
      </li>
     </ul> 
