--- a/index.html
+++ b/index.html
@@ -331,6 +331,8 @@ function fnSetActiveSheet(iSh)
  </noframes>
 </frameset>
 </html>
+  
+  <html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
     <title>Cチームデータ</title>
